--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,13 @@
+@inbook{rosen2011energy,
+title = "Energy storage in future power systems",
+publisher = "Nova Science Publishers, Incorporated",
+author = "Rasmussen, {Claus Nygaard} and Jacob Østergaard and Divya, {K. C.}",
+year = "2011",
+editor = "Rosen, {Marc A.}",
+isbn = "978-1-61324-708-2",
+booktitle = "Energy storage",
+}
+
 @article{interconnection2010survey,
   title={A survey of transmission cost allocation issues, methods and practices},
   author={Interconnection, PJM},
