--- a/quantify.tex
+++ b/quantify.tex
@@ -85,8 +85,10 @@ DC6 & Massachusetts & 27& 300.21 & 4 \\
 \end{table}
 
 
-{\em Wind farm model:}  We have similarly added wind farms to the model to represent recent penetration of wind energy.  Specifically, lumped models of several wind farms within geographical regions have been connected to bus 18, 28, 36, 37 and 38. \red{Note that the wind farms don't have energy storage equipped and the wind energy will be directly penetrated into the grid.} The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by `$n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}.  For this particular turbine model, the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond which the turbine will be shut down for safety reasons. The wind turbine produces rated output that grows linearly from near 0MW to 1.2MW for wind speeds from 6m/s to 10m/s, then more slowly to reach the top rated output of
-1.5MW between wind speeds of 13-25m/s.
+{\em Wind farm model:}  We have similarly added wind farms to the model to represent recent penetration of wind energy.  Specifically, lumped models of several wind farms within geographical regions have been connected to bus 18, 28, 36, 37 and 38. 
+The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by `$n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}.  For this particular turbine model, the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond which the turbine will be shut down for safety reasons. The wind turbine produces rated output that grows linearly from near 0MW to 1.2MW for wind speeds from 6m/s to 10m/s, then more slowly to reach the top rated output of 1.5MW between wind speeds of 13-25m/s.
+
+\red{Note that the wind farms don't have energy storage equipped and the wind energy will be directly penetrated into the grid. Our focus is to show that in any electric grid it is important to consider the transmission grid constraints while deciding the data center location. Also we believe that optimally located data center can replace energy storage functionality to a certain extent. For example, the transmission line congestion can be reduced by appropriately placing the energy storage. However, a cost effective and optimal manner to do it is to use the algorithm we have proposed in this paper to locate the data center. Another reason we are not considering energy storage is because there are diverse types of energy storage and not all of them are cost effective. Also we believe that the topic of cost effective and practically viable energy storage is an independent research topic. A comprehensive study has been presented in \cite{rosen2011energy}.}
 
 %  From Figure~\ref{fig:windcurve} we can see that the cut-in wind speed,
 % %%%
