add copyright footnote

--- a/intro.tex
+++ b/intro.tex
@@ -6,7 +6,7 @@ Datacenters are being constructed at a rapid pace as computing is increasingly m
 Researchers have studied the placement of new datacenters since they are expensive to build and operate, and parts of the construction and operation costs are location-dependent~\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal,berral2014building}.  However, these studies have not considered the impact of new datacenters on the grid.  Others have studied whether the renewable power plants should be co-located with the datacenters\cite{Ren12MASCOTS}, and have considered transmission loss when the datacenter and the renewable power plant were physically distributed.  However, they assumed a fixed loss percentage.
 
 In this paper, we first show that the placement of a large renewable powered datacenter can significantly impact the transmission grid, and that careful placement can be beneficial to both the grid operators and datacenter owners.  Specifically, we study the impact of placing a datacenter and an offsetting wind farm within a real world transmission system of the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.  We use simulation to show that datacenters/renewable power plants located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range; iii) system losses.
-
+\IEEEpubidadjcol
 
 % Furthermore, grid losses are on of the largest expenses for the power system operators \cite{de2014investigation}. EIA (U.S. Energy Information Administration) \cite{EIA} has estimated that the electricity transmission and distribution losses all over the U.S. is about 6\% of the electricity that is transmitted and distributed each year (averaged from 1990 to 2012). Thus, reduction of these losses for the grid can greatly affect the total operational costs.
 
