--- a/paper.tex
+++ b/paper.tex
@@ -3,7 +3,8 @@
 % is locked out in conference mode. If really needed, such as for
 % the acknowledgment of grants, issue a \IEEEoverridecommandlockouts
 % after \documentclass
-% \IEEEoverridecommandlockouts
+
+\IEEEoverridecommandlockouts
 
 \usepackage{color,graphicx}
 \usepackage{cite}
@@ -77,14 +78,13 @@
  }
  }
 
-
+\IEEEpubid{978-1-5090-0172-9/15/\$31.00~\copyright~2015 IEEE}
 % \IEEEpubid{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
 % \IEEEpubid{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
-%\IEEEpubid{\makebox[\columnwidth]{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE \hfill} \hspace{\columnsep}\makebox[\columnwidth]{ }}
+% \IEEEpubid{\makebox[\columnwidth]{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE \hfill} \hspace{\columnsep}\makebox[\columnwidth]{ }}
 
-% \CopyrightYear{2013}
-% \copyrightdata{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
-
+%\copyrightYear{2013}
+%\copyrightdata{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
 %\IEEEpubidadjcol
 
 \date{}
