Finalized author information.  Passed through Abstract; tightened and shortened.

--- a/paper.tex
+++ b/paper.tex
@@ -3,8 +3,7 @@
 % is locked out in conference mode. If really needed, such as for
 % the acknowledgment of grants, issue a \IEEEoverridecommandlockouts
 % after \documentclass
-
-\IEEEoverridecommandlockouts
+% \IEEEoverridecommandlockouts
 
 \usepackage{color,graphicx}
 \usepackage{cite}
@@ -52,30 +51,45 @@
 \title{Grid-Aware Placement of Datacenters\\and Wind Farms
 % \thanks{This work was partially supported by NSF grant XXX-YYYYYY %CSR-1117368
 % and the Rutgers Green Computing Initiative.}
-\vspace{-0.25in}
+\vspace{-0.5in}
 }
 
 % Thu: Anonymity for double-blind review.
 %
  \author{
- \IEEEauthorblockN{Xiaoying Wang} \IEEEauthorblockA{Department of
-   Computer \\
- Technology and Applications \\
- Qinghai University, China\\
- Email: wxy\_cta@qhu.edu.cn
- }
- \and
- \IEEEauthorblockN{Divya Kurthakoti Chandrashekhara}
- \IEEEauthorblockA{Siemens Corporate Research, USA\\
- Email: div.s.sya@gmail.com
- }
- \and
- \IEEEauthorblockN{Md E. Haque, \'I\~nigo Goiri, \\ Ricardo
- Bianchini, Thu D. Nguyen} \IEEEauthorblockA{Department of Computer Science\\
- Rutgers University, USA\\
- Email: \{mdhaque, goiri, ricardob, \\
- tdnguyen\}@cs.rutgers.edu
- }
+Xiaoying Wang*, Divya Kurthakoti Chandrashekhara$^\delta$, Md
+Haque$^\ddag$, \'I\~{n}igo Goiri$^{\dag}$, Ricardo
+Bianchini$^{\dag\ddag}$, Thu Nguyen$^\ddag$\\
+[.075in]
+\begin{tabular}{ccc}
+  *Qinghai University, China & ~~~~~~~~~~ & $^\delta$Siemens Corporate Research \\
+  wxy\_cta@qhu.edu.cn & & divya.kurthakoti-chandrashekhara@siemens.com \\
+\end{tabular}\\
+[0.075in]
+\begin{tabular}{ccc}
+    $^\dag$Microsoft Research & ~~~~~~~~~~ & $^\ddag$Rutgers University \\
+    \{inigog, ricardob\}@microsoft.com & & \{mdhaque, ricardob, tdnguyen\}@cs.rutgers.edu\\
+\end{tabular}
+%  \IEEEauthorblockN{Xiaoying Wang} \IEEEauthorblockA{
+% Department of
+%  Computer \\
+%  Technology and Applications \\
+%  Qinghai University, China\\
+%  Email: wxy\_cta@qhu.edu.cn
+%  }
+%  \and
+%  \IEEEauthorblockN{Divya Kurthakoti Chandrashekhara}
+%  \IEEEauthorblockA{Siemens Corporate Research, USA\\
+%  Email: div.s.sya@gmail.com
+%  }
+%  \and
+%  \IEEEauthorblockN{
+%  \IEEEauthorblockN{Md E. Haque, \'I\~nigo Goiri, \\ Ricardo
+%  Bianchini, Thu D. Nguyen} \IEEEauthorblockA{Department of Computer Science\\
+%  Rutgers University, USA\\
+%  Email: \{mdhaque, goiri, ricardob, \\
+%  tdnguyen\}@cs.rutgers.edu
+%  }
  }
 
 \IEEEpubid{978-1-5090-0172-9/15/\$31.00~\copyright~2015 IEEE}
