Move ack of funding to front.

--- a/paper.tex
+++ b/paper.tex
@@ -3,7 +3,7 @@
 % is locked out in conference mode. If really needed, such as for
 % the acknowledgment of grants, issue a \IEEEoverridecommandlockouts
 % after \documentclass
-% \IEEEoverridecommandlockouts
+\IEEEoverridecommandlockouts
 
 \usepackage{color,graphicx}
 \usepackage{cite}
@@ -48,21 +48,23 @@
 
 \begin{document}
 
-\title{Grid-Aware Placement of Datacenters\\and Wind Farms
-% \thanks{This work was partially supported by NSF grant XXX-YYYYYY %CSR-1117368
-% and the Rutgers Green Computing Initiative.}
+\title{Grid-Aware Placement of Datacenters\\and Wind
+  Farms$^*$\thanks{*This work was partially supported by NSFC
+    grant No.~61363019, NSF grant CSR-1117368, the Rutgers Green Computing
+    Initiative, the BSC-CNS Severo Ochoa program, and the
+    TIN2012-34557 project.}
 \vspace{-0.5in}
 }
 
 % Thu: Anonymity for double-blind review.
 %
  \author{
-Xiaoying Wang*, Divya Kurthakoti Chandrashekhara$^\delta$, Md
+Xiaoying Wang$^\pm$, Divya Kurthakoti Chandrashekhara$^\delta$, Md
 Haque$^\ddag$, \'I\~{n}igo Goiri$^{\dag}$, Ricardo
 Bianchini$^{\dag\ddag}$, Thu Nguyen$^\ddag$\\
 [.075in]
 \begin{tabular}{ccc}
-  *Qinghai University, China & ~~~~~~~~~~ & $^\delta$Siemens Corporate Research \\
+  $^\pm$Qinghai University, China & ~~~~~~~~~~ & $^\delta$Siemens Corporate Research \\
   wxy\_cta@qhu.edu.cn & & divya.kurthakoti-chandrashekhara@siemens.com \\
 \end{tabular}\\
 [0.075in]
