Passed through Introduction.  Tightened and shortened a little bit.

--- a/paper.tex
+++ b/paper.tex
@@ -114,7 +114,7 @@ Bianchini$^{\dag\ddag}$, Thu Nguyen$^\ddag$\\
 \input{placement}
 \input{related}
 \input{conclusion}
-\input{acks}
+%\input{acks}
 
 \bibliographystyle{IEEEtran}
 \bibliography{paper}
