--- a/quantify.tex
+++ b/quantify.tex
@@ -13,28 +13,28 @@ In this section, we first discuss different ways that the placement of renewable
 The rapidly increasing penetration of large renewable powered datacenters can potentially impact the power grid in several ways.
 
 \subsubsection{Overloading of transmission lines}
-The transmission lines (referred as branch hereafter in the paper) are used to transport power from the large generators to the load. The power carrying capacity is limited to protect the line from over heating, mainly due to the line resistive losses, i.e., $I^{2}R$, where $I$ is the current flowing through the branch and $R$ is the resistance of the branch.
+Transmission lines (also referred to as ``branches'') are used to transport power from the large generators to the load. The power carrying capacity of each line is limited to protect the line from overheating, mainly due to the line resistive losses, i.e., $I^{2}R$, where $I$ is the current flowing through the line and $R$ is the resistance of the line.
 
-A transmission line has typically two ratings: short term and long term capacity rating. During certain wind and system load (including datacenter load) conditions, some of the transmission lines could get overloaded. If this happens during the normal operation of the electric grid then one of the following will be done: i) if an electronic power flow controller is available then it is used to control the power flow through the overloaded line; or ii) in extreme situations, the overloaded line is disconnected which may result in power supply interruption to the loads.
+A transmission line typically has two ratings: short term and long term capacity rating. During certain wind and system load (including datacenter load) conditions, some of the transmission lines could get overloaded. If this happens during the normal operation of the grid then one of the following will be done: i) if an electronic power flow controller is available then it is used to control the power flow through the overloaded line; or ii) in extreme situations, the overloaded line is disconnected which may result in power supply interruption to the loads.
 
-If major transmission lines are getting overloaded quite often annually then new lines are planned and built.  As already mentioned, this solution is very expensive and takes a long time. The need for such expensive grid retrofits may be minimized by planning the location of large new loads such as datacenters.
+If major transmission lines are getting overloaded quite often annually then new lines are planned and built.  As already mentioned, this solution is very expensive and takes a long time. The need for such expensive grid retrofits may be minimized by planning the location of large new generators such as wind farms and large new loads such as datacenters.
 
-\subsubsection{Voltage variation in electric grid}
-The voltage magnitude varies in the electric grid and needs to be maintained within a narrow range (for example +/- 5\% of nominal) so that there is no damage caused to the sensitive electronic loads. However, sometimes/days the change in renewable power output could cause the voltage to vary beyond the acceptable limits. Such over/under voltage problems can be mitigated by appropriately locating new renewable powered datacenters.
+\subsubsection{Voltage variations}
+The voltage magnitude varies in the electric grid, and needs to be maintained within a narrow range (for example +/- 5\% of nominal) to avoid damaging sensitive electronic loads.  Unfortunately, there are times when changes in the power output of renewable power plants can cause the voltage to vary beyond the acceptable limits. Such over/under voltage problems can be mitigated by appropriately locating new renewable powered datacenters.
 
 \subsubsection{System losses}
-Historically, the electric grid was designed to have large central generating stations that are located far away from the load centers. The power from these central sources would be transmitted to the datacenter over transmission lines. While designing such a grid, the generator location and the transmission line voltage level as well as the path would be optimized to minimize the line losses.  However, today with renewable power being distributed the scenario has changed, the generation sources are distributed and they may be located near the load centers. In order to transfer power from these renewable source we still use the existing transmission lines that were planned and built about 50 years ago or earlier. This may result in higher line losses and sub-optimal power transmission between generation sources and loads. Since we cannot re-design the entire electric grid to minimize line losses, we need to leverage the flexibility we have in locating new loads, i.e., renewable powered datacenters in our specific case.
+Historically, the electric grid was designed to have large central generating stations that are located far away from the load centers. The power from these central sources would be transmitted to the load centers over transmission lines. While designing such a grid, the generator location and the transmission line voltage level as well as the path would be optimized to minimize the line losses.  With increasing penetration of renewable power, however, this scenario has changed: the generation sources are distributed and may be located near the load centers.  Yet, we still use the existing transmission lines that were planned and built about 50 years ago or earlier.  This may result in higher line losses and sub-optimal power transmission between generation sources and loads. Since we cannot re-design the entire electric grid to minimize line losses, we need to leverage the flexibility we have in locating new sources and loads, i.e., renewable powered datacenters in our specific case.
 
 
 \subsection{Simulation study}
-In order to quantitatively study the impact of renewable powered datacenter location in a power grid, we consider the New England ISO transmission network. We choose this system due to the following reasons:
+In order to quantitatively study the impact of renewable powered datacenter location in a power grid, we consider the New England ISO transmission network. We choose this system for the following reasons:
 
-{\em Wind power expansion in New England:} The system studies carried by the New England ISO state that in this region there is a potential of integrating up to 12 Giga-Watts of wind power. Given this enormous interest to install new wind farms, this region may have a great potential in future to accommodate datacenters powered by wind farms.
+{\em Wind power expansion in New England:} System studies carried out by the New England ISO show that there is a potential for integrating up to 12 Giga-Watts of wind power in this region.  This enormous potential for wind power makes the region an interesting destination for datacenters powered by wind farms.
 
-{\em Transmission network upgrades:} A study carried out by the New England ISO showed that they could potentially integrate wind resources to meet up to 24\% of the region's total annual electric energy needs in 2020 if the system includes transmission
+{\em Transmission network upgrades:} A study carried out by the New England ISO shows that they could potentially integrate wind resources to meet up to 24\% of the region's total annual electric energy needs in 2020 if the system includes transmission
 upgrades. If these transmission upgrades can be limited then the development of new wind farms becomes more economical.
 
-{\em Positive impacts of wind power in New England ISO:} Introducing large amounts of low-marginal-cost wind generation tended to depress the spot price and reduce the price differential for bulk power between day and night. Also the study results demonstrated that there was only a relatively small increase in the use of existing pumped-storage hydro power for large wind penetrations, largely because the flexible natural-gas-fired generation fleet provided most of the system balancing.
+{\em Positive impacts of wind power in New England ISO:} Introducing large amounts of low-marginal-cost wind generation tends to depress the spot price and reduce the price differential for bulk power between day and night. Also the study results demonstrated that there was only a relatively small increase in the use of existing pumped-storage hydro power for large wind penetrations, largely because the flexible natural-gas-fired generation fleet provided most of the system balancing.
 
 We will show in our study, that within the New England ISO, the wind power penetration can be increased much more cost effectively by strategically locating the datacenter. Intuitively, it may appear that co-locating datacenter loads and wind farms would solve the problem of building new transmission lines, limit the voltage variation and also minimize losses. However, our study shows that this is not indeed true and co-locating wind farm and datacenter may not be the optimal solution always.
 
@@ -53,14 +53,10 @@ For our study we considered a widely used  \cite{bills1970line} model of the New
 \end{figure}
 %%%
 
-{\em Datacenter model:} Since the model of the New England system was created, large datacenters have been added to the region.  To account for this added new load, we collected information on datacenters in the area from~\cite{DCmap}.  Then, using a mapping of the buses in the model to geographic locations, we aggregate all the datacenters in the New England ISO region into six datacenters, each representing datacenters in a state, and placed each aggregated datacenter on a bus appropriate for that state. In order to estimate the size of an "aggregated" datacenter in a certain state, we use the following equation:
-
-\begin{equation}
-L_i=\frac{n_i*9.8GW}{1278}
-\end{equation}
-
-\noindent where $L_i$ is the aggregated load of the $i$th state, $n_i$ is the number of datacenters reported in that state,  9.8GW is the upper bound of total electricity used by US datacenters in 2010, according to the report \cite{Koomey2011}, and 1278 is the number of datacenters in US collected and reported in \cite{DCmap}. However, according to \cite{Koomey2011}, for the summarized load of datacenters, there is an increase of 56\% from 2005-2010. Hence, we are assuming the increasing percentage from 2010-2014 is 56\%*0.8=45\%, and after adjustment we are using $L'_i=1.45L_i$ as the datacenter load for the target grid system.
-
+{\em Datacenter model:} Since the model of the New England system was created, large datacenters have been added to the region.  To account for this added new load, we collected information on datacenters in the area from~\cite{DCmap}.  Then, using a mapping of the buses in the model to geographic locations, we aggregate all the datacenters in the New England ISO region into six datacenters, each representing datacenters in a state, and placed each aggregated datacenter on a bus appropriate for that state.  We estimate the size of each ``aggregated'' datacenter as 
+$L_i=(n_i* 1.45 * 9.8GW)/1278$, where $L_i$ is the aggregated load of the $i$th state, $n_i$ is the number of datacenters in that state, 9.8GW is the upper bound of total electricity used by US datacenters in 2010 \cite{Koomey2011}, 1.45 is a rough estimate of growth in datacenter electricity consumption from 2010 to 2014 (using information from \cite{Koomey2011}), 
+and 1278 is the total number of datacenters in the US as reported in \cite{DCmap}.
+% However, according to \cite{Koomey2011}, for the summarized load of datacenters, there is an increase of 56\% from 2005-2010. Hence, we are assuming the increasing percentage from 2010-2014 is 56\%*0.8=45\%, and after adjustment we are using $L'_i=1.45L_i$ as the datacenter load for the target grid system.
 Table~\ref{tab:dc_setting} shows the placement of these aggregated datacenters and their sizes.
 
 \begin{table}[ht]
@@ -68,7 +64,7 @@ Table~\ref{tab:dc_setting} shows the placement of these aggregated datacenters a
 \caption{Background datacenter load and location settings}
 \begin{tabular}{|l|l|p{30pt}|p{50pt}|p{30pt}|}
 \hline
-DC No. & State & Number of DCs & Estimated  aggregate size(MW) & Mapped Bus No.\\
+DC No. & State & Number of DCs & Estimated  aggregate size (MW) & Mapped Bus No.\\
 \hline
 DC1 & Connecticut & 12 &133.43 & 6\\
 DC2 & Maine & 3 &33.36 & 29 \\
@@ -86,9 +82,11 @@ DC6 & Massachusetts & 27& 300.21 & 4 \\
 
 
 {\em Wind farm model:}  We have similarly added wind farms to the model to represent recent penetration of wind energy.  Specifically, lumped models of several wind farms within geographical regions have been connected to bus 18, 28, 36, 37 and 38. 
-The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by `$n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}.  For this particular turbine model, the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond which the turbine will be shut down for safety reasons. The wind turbine produces rated output that grows linearly from near 0MW to 1.2MW for wind speeds from 6m/s to 10m/s, then more slowly to reach the top rated output of 1.5MW between wind speeds of 13-25m/s.
+The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by $n$ identical wind turbines, where $n$ is equal to the total farm rated capacity divided by the individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are GE 1.5MW machines, we use the 
+wind speed versus power characteristics of this turbine model\cite{lei2006modeling}.
+For this particular turbine model, the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond which the turbine will be shut down for safety reasons. The wind turbine produces rated output that grows linearly from near 0MW to 1.2MW for wind speeds from 6m/s to 10m/s, then more slowly to reach the top rated output of 1.5MW between wind speeds of 13-25m/s.  We assume that wind farms are not provisioned with energy storage capacity.
 
-\red{Note that the wind farms don't have energy storage equipped and the wind energy will be directly penetrated into the grid. Our focus is to show that in any electric grid it is important to consider the transmission grid constraints while deciding the data center location. Also we believe that optimally located data center can replace energy storage functionality to a certain extent. For example, the transmission line congestion can be reduced by appropriately placing the energy storage. However, a cost effective and optimal manner to do it is to use the algorithm we have proposed in this paper to locate the data center. Another reason we are not considering energy storage is because there are diverse types of energy storage and not all of them are cost effective. Also we believe that the topic of cost effective and practically viable energy storage is an independent research topic. A comprehensive study has been presented in \cite{rosen2011energy}.}
+% \red{Note that the wind farms don't have energy storage equipped and the wind energy will be directly penetrated into the grid. Our focus is to show that in any electric grid it is important to consider the transmission grid constraints while deciding the data center location. Also we believe that optimally located data center can replace energy storage functionality to a certain extent. For example, the transmission line congestion can be reduced by appropriately placing the energy storage. However, a cost effective and optimal manner to do it is to use the algorithm we have proposed in this paper to locate the data center. Another reason we are not considering energy storage is because there are diverse types of energy storage and not all of them are cost effective. Also we believe that the topic of cost effective and practically viable energy storage is an independent research topic. A comprehensive study has been presented in \cite{rosen2011energy}.}
 
 %  From Figure~\ref{fig:windcurve} we can see that the cut-in wind speed,
 % %%%
@@ -103,7 +101,7 @@ The locations and capacity settings of the five wind farms are presented in Tabl
 
 \begin{table}[ht]
 \begin{center}
-\caption{Wind farm settings}
+\caption{Background wind farm settings}
 \begin{tabular}{|l|l|c|c|}
 \hline
 WF No. & Bus No. & State & Capacity(MW) \\
@@ -123,11 +121,11 @@ WF5 & 38& Massachusetts & 90\\
 
 \subsection{Case study}
 \label{sec:casestudy}
-We have used the above described model and carried out the following case studies to assess the impact of datacenter location on the renewable power grid.
+We have used the above described model and carried out the following case studies to assess the impact of datacenter location on the power grid.
 \begin{itemize}
 \item{Case 1: Existing New England system}
-\item{Case 2: New England system with one additional datacenter (co-located with a wind farm)}
-\item{Case 3: New England system with one additional datacenter (located away from the wind farm)}
+\item{Case 2: New England system with one additional datacenter and a co-located wind farm}
+\item{Case 3: New England system with one additional datacenter and a wind farm placed at different locations}
 \end{itemize}
 \red{Specifically, the wind farm is assumed to have the same characteristics no matter it's co-located with or located away from the datacenter.} For assessing the impact, we use the three metrics described earlier (section \ref{sec:intro}) and calculate the system losses, power flows through the transmission lines and the bus voltages.
 The system losses, line flows and the bus voltages are calculated by solving the power flow or loadflow equations. The loadflow equations mathematically model the power balance (i.e., net load +losses = total generation in the electric grid). Within an electric grid the power can be easily measured at the loads and at generators. Also, some generators have the capability to regulate the voltage at a bus at a constant preset reference value. The power flow equations are used to calculate the bus voltages (magnitude and angle), for a given network and a set of load and generation powers. The loadflow equation for a generic $n$ bus network with $k$ branches is given below.
