--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,10 +1,7 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this paper, we proposed that new renewable powered datacenters should be placed intelligently while considering their impact on the electricity transmission system (along with other datacenter capital and operation costs).  Specifically, we studied the potential impact of new datacenters on the New England ISO transmission system.  Using simulation, we show that different placements of a new datacenter and its offsetting wind farm can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, strategic placement of new renewable powered datacenters can be beneficial for both grid operators and datacenters owners.  We developed an optimization framework for the placement of a new datacenter and offsetting wind farm\red{, which can be easily extended to simultaneous placement of multiple data centers and multiple wind farms.
-Our algorithm shows the importance of considering the transmission constraints while deciding the data center location. Ignoring transmission constraints could make developing renewable powered data centers infeasible for the following reasons: 1) It is very expensive to build new transmission lines; 2) Building a new transmission line takes 8-10 years; 3) In certain cases it is not possible to build new lines (for example lines passing through densely populated cities with land constraints). These problems become severe and critical, in the near future, when the renewable powered data centers penetration level in the transmission system increases.
-Thus, the exploration of our work can help to give instructions for the service providers to do practical capacity planning when building new datacenters with wind farms in a certain area of the transmission grid system.}
-
+In this paper, we proposed that new renewable powered datacenters should be placed intelligently while considering their impact on the electricity transmission system (along with other datacenter/wind farm capital and operation costs).  Specifically, we studied the potential impact of new datacenters on the New England ISO transmission system.  Using simulation, we showed that different placements of a new datacenter can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, strategic placement of new renewable powered datacenters is critical since ignoring transmission constraints could make developing renewable powered data centers infeasible since: 1) it is very expensive to build new transmission lines; 2) building a new transmission line takes 8-10 years; and 3) in certain cases it is not possible to build new lines (for example lines passing through densely populated cities with land constraints).  Even when tranmission constraints are met, strategic placement can lead to lower overall costs for both grid operators and datacenters owners.  We developed an optimization framework for the placement of a new datacenter and offsetting wind farm, and used it in a case study.  Our results show that considering the cost of transmission system losses can lead to different placements that achieve lower total cost.
 
 %%% Local Variables:
 %%% mode: latex
