--- a/framework.tex
+++ b/framework.tex
@@ -1,7 +1,7 @@
 \section{Cost-based Placement}
 \label{sec:framework}
 
-As shown in the last section, the placement of new datacenters and wind farms can have significant impact on a grid transmission system.  As previously shown in~\cite{berral2014building,Goiri11place}, the placement of datacenters can also significantly impact their costs.  Thus, in this section, we develop an optimization framework for placing new renewable powered datacenters that unifies the impact of location on the costs of datacenters and loss in the transmission grid.  For simplicity, we assume that one datacenter and one wind farm are being placed in the system simultaneously.  Our framework can be easily extended to account for the simultaneous placement of multiple datacenters and multiple wind farms; of course, solving the optimization problem can become much more challenging for such cases.  Our optimization seek to find locations for the datacenter and wind farm that lead to the lowest total cost for construction and operation.  The overall framework is based on computing the cost throughout a year, using amortized capital costs and operational costs for the datacenter and operational revenue of the wind farm, along with system loss in the transmission network.
+As shown in the last section, the placement of new datacenters and wind farms can have significant impact on a grid transmission system.  As previously shown in~\cite{berral2014building,Goiri11place}, the placement of datacenters can also significantly impact their costs.  Thus, in this section, we develop an optimization framework for placing new renewable powered datacenters that unifies the impact of location on the costs of datacenters and losses in the transmission grid.  For simplicity, we study the case of placing a single new datacenter and one offsetting wind farm.  Our framework can be easily extended to place multiple datacenters and multiple wind farms; of course, solving the optimization problem can become much more challenging for such cases.  Our optimization seeks to find locations for the datacenter and wind farm that lead to the lowest total cost for construction and operation.  The overall framework is based on computing the cost throughout a year, using amortized capital costs, operational costs of the datacenter, operational revenue of the wind farm, and system losses in the transmission network.
 
 % By grid-aware placement, we attempt to efficiently select a set of locations for one or more datacenters to support a given amount of computational power, as well as one or more green power plants (e.g. solar, wind or others) to provide a given power capacity. The main goal is to minimize the overall cost for datacenters, green power plants and also the grid network operation. The next subsections defines some important parameters in the selection procedure. Then, the cost model and the entire optimization problem will be formulated and described.
 
@@ -57,7 +57,7 @@ $\textit{pTransLoss}$ & the price for system transmission losses per kWh & \$/kW
 
 \subsection{Optimization Framework}
 
-Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using these parameters, we define the optimization problem shown in Figure~\ref{fig:optimization}.  The objective of this optimization problem is to minimize the total cost ({\em totalCost}) of building and operating a datacenter of a given size ({\em dcCAPEX}) and a wind farm of a given size ({\em wfCapacity}). %\xynote{In the program, wind farm size is not given but calculated based on the datacenter size and other location-dependent parameters.}
+Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using these parameters, we define the optimization problem shown in Figure~\ref{fig:optimization}.  The objective of this optimization problem is to minimize the total cost ({\em totalCost}) of building and operating a datacenter of a given size ({\em dcCapacity}) and a wind farm of a given size ({\em wfCapacity}) over a given time period ($T$). %\xynote{In the program, wind farm size is not given but calculated based on the datacenter size and other location-dependent parameters.}
 The datacenter and wind farm can each be placed at any location within a set of given locations.  The total cost has three components, the cost of the datacenter ($dcCost$), the cost of the wind farm ($wfCost$), and the cost of losses in the transmission system ($transCost$).
 
 \begin{figure}
@@ -68,32 +68,36 @@ The datacenter and wind farm can each be placed at any location within a set of 
 % \end{eqnarray}
 % where
 \begin{scriptsize}
+\begin{center}
+Minimize {\em totalCost}, where
+\end{center}
 \begin{eqnarray}
- 	\textbf{\red{minimize}   }   \textit{totalCost}&=&\textit{dcCost + wfCost + transCost} \\
-	  \textit{dcCost}&=& \textit{dcCAPEX + dcOPEX} \\
-         \textit{dcCAPEX}&=& \textit{dcLandCost + dcBuildCost + dcITCost} \\
-        \textit{dcOPEX}&=& \textit{dcNetCost + dcEnergyCost} \\
-         \textit{dcLandCost}&=& \textit{pLand}(d) \cdot  \textit{dcArea} \cdot  \textit{dcCapacity} \\
-        \textit{dcBuildCost}&=& \textit{dcTotalPow} \cdot  \textit{pBuildDC(dcTotalPow)} + \nonumber\\
-         &  & \textit{cLinePow}(d) +  \textit{cLineNet}(d) \\
-         \textit{dcTotalPow} &=&  \textit{dcCapacity} \cdot  \textit{maxPUE}(d) \\
-         \textit{dcITCost}&=& \textit{nServers} \cdot  \textit{pServer} +  \textit{nSwitches} \cdot
-             \textit{pSwitch} \\
-         \textit{nServers}&=& \textit{dcCapacity} / ( \textit{serverPow} % \nonumber\\
-          +  \textit{switchPow} /  \textit{servsSwitch})\\
-         \textit{nSwitches}&=& \textit{nServers / servsSwitch}\\
-         \textit{dcNetCost}&=& \textit{nServers} \cdot  \textit{pNBWServ} \\
-         \textit{dcEnergyCost}&=&\sum_{t \in T} {|t| \cdot  \textit{powNeed}(t) \cdot  \textit{PUE}(d,t) \cdot  \textit{pEnergy}(d) } \\
- 	 \textit{wfCost}&=& \textit{wfCAPEX - wfRev}  \\
-         \textit{wfCAPEX}&=& \textit{wfLandCost + wfBuildCost} \\
-         \textit{wfLandCost}&=& \textit{pLand}(w) \cdot  \textit{wfArea} \cdot  \textit{wfCapacity} \\
-         \textit{wfBuildCost}&=& \textit{pBuildWF} \cdot \textit{ wfCapicity + cLinePow(w)} \\
-         \textit{wfRev}&=& \textit{revEnergy}(w) \cdot  \sum_{t \in T}{ |t| \cdot
-            \beta(w,t) \cdot  \textit{wfCapicity} } \\
-         \textit{transCost}&=& \textit{pTransLoss} \cdot \sum_{t \in T}{ |t| \cdot  \textit{transLoss}(t)} % + disLoss(t))}\\
+  \textit{totalCost}&=&\textit{dcCost + wfCost + transCost} \\
+  \textit{dcCost}&=& \textit{dcCAPEX + dcOPEX} \\
+  \textit{dcCAPEX}&=& \textit{dcLandCost + dcBuildCost + dcITCost} \\
+  \textit{dcOPEX}&=& \textit{dcNetCost + dcEnergyCost} \\
+  \textit{dcLandCost}&=& \textit{pLand}(d) \cdot  \textit{dcArea} \cdot  \textit{dcCapacity} \\
+  \textit{dcBuildCost}&=& \textit{dcTotalPow} \cdot  \textit{pBuildDC(dcTotalPow)} + \nonumber\\
+                      &  & \textit{cLinePow}(d) +  \textit{cLineNet}(d) \\
+  \textit{dcTotalPow} &=&  \textit{dcCapacity} \cdot  \textit{maxPUE}(d) \\
+  \textit{dcITCost}&=& \textit{nServers} \cdot  \textit{pServer} +  \textit{nSwitches} \cdot
+                       \textit{pSwitch} \\
+  \textit{nServers}&=& \textit{dcCapacity} / ( \textit{serverPow} % \nonumber\\
+                       +  \textit{switchPow} /  \textit{servsSwitch})\\
+  \textit{nSwitches}&=& \textit{nServers / servsSwitch}\\
+  \textit{dcNetCost}&=& \textit{nServers} \cdot  \textit{pNBWServ} \\
+  \textit{dcEnergyCost}&=&\sum_{t \in T} {|t| \cdot  \textit{powNeed}(t) \cdot  \textit{PUE}(d,t) \cdot
+                           \textit{pEnergy}(d) } \\
+  \textit{wfCost}&=& \textit{wfCAPEX - wfRev}  \\
+  \textit{wfCAPEX}&=& \textit{wfLandCost + wfBuildCost} \\
+  \textit{wfLandCost}&=& \textit{pLand}(w) \cdot  \textit{wfArea} \cdot  \textit{wfCapacity} \\
+  \textit{wfBuildCost}&=& \textit{pBuildWF} \cdot \textit{ wfCapicity + cLinePow(w)} \\
+  \textit{wfRev}&=& \textit{revEnergy}(w) \cdot  \sum_{t \in T}{ |t| \cdot
+                    \beta(w,t) \cdot  \textit{wfCapicity} } \\
+  \textit{transCost}&=& \textit{pTransLoss} \cdot \sum_{t \in T}{ |t| \cdot  \textit{transLoss}(t)} % + disLoss(t))}\\
 \end{eqnarray}
 \end{scriptsize}
-\caption{Optimization framework with objective of minimizing $totalCost$.  The datacenter is placed at location $d$ and the windfarm is placed at location $w$.  The objective is to minimize $totalCost$ for a given time period $T$ (divided into epochs denoted by $t$) and a set of possible locations for $d$ and $w$.  $|t|$ denotes the length of epoch $t$.}
+\caption{Optimization problem.  The datacenter is placed at location $d$ and the windfarm is placed at location $w$.  The objective is to minimize $totalCost$ for a given time period $T$ (divided into epochs denoted by $t$) and a set of possible locations for $d$ and $w$.  $|t|$ denotes the length of epoch $t$.}
 \label{fig:optimization}
 \vspace{-0.2in}
 \end{figure}
@@ -101,7 +105,8 @@ The datacenter and wind farm can each be placed at any location within a set of 
 
 
 
-\subsubsection{Datacenter} The cost of the datacenter can be broken down into capital ($dcCAPEX$) and operational ($dcOPEX$) components.  The capital costs are those investments made upfront and depreciated over the lifetime of the datacenter.  These costs include the cost for buying land ($dcLandCost$), building the datacenter ($dcBuildCost$), and buying IT equipment ($dcITCost$).  The cost of building the datacenter include datacenter construction cost as well as the costs of laying power and network lines to the datacenter.  IT equipment includes servers and switches.  Land price varies according to location ($pLand(d)$ for location $d$), whereas the other prices do not to a first approximation.  Of course, the total cost of laying the power ($cLinePow(d)$) and network ($cLineNet(d)$) lines depends on location, as the distances to the closest power plant and network backbone are location-dependent.  The datacenter construction cost is typically estimated as a function of the maximum power to be consumed by the datacenter.  This maximum power is that required by the maximum number of servers and network switches when running at 100\% utilization times the maximum expected PUE of the datacenter.  The PUE is computed by dividing the overall power consumption by the power consumption of the computational equipment.  The PUE is higher when temperature and/or humidity are high, since cooling consumes more energy under those conditions.
+\subsubsection{Datacenter} The cost of the datacenter can be broken down into capital ($dcCAPEX$) and operational ($dcOPEX$) components.  The capital costs are those investments made upfront and depreciated over the lifetime of the datacenter.  These costs include the cost for buying land ($dcLandCost$), building the datacenter ($dcBuildCost$), and buying IT equipment ($dcITCost$).  The cost of building the datacenter include datacenter construction cost as well as the costs of laying power and network lines to the datacenter.  IT equipment includes servers and switches.  Land price varies according to location ($pLand(d)$ for location $d$), whereas the other prices do not to a first approximation.  Of course, the total cost of laying the power ($cLinePow(d)$) and network ($cLineNet(d)$) lines depends on location, as the distances to the closest power plant and network backbone are location-dependent.  The datacenter construction cost is typically estimated as a function of the maximum power to be consumed by the datacenter.  This maximum power is that required by the maximum number of servers and network switches when running at 100\% utilization times the maximum expected PUE of the datacenter, where PUE represents the expected overheads of power losses within the datacenter and cooling.
+The PUE is higher when temperature and/or humidity are high, since cooling consumes more energy under those conditions.  The maximum PUE varies with location.
 
 The operational costs are those incurred during the operation of the datacenter over the time period $T$, and include costs for external network bandwidth use ($dcNetCost$) and the grid electricity ($dcEnergyCost$) required to run the datacenter.
 %(There is also a cost for water, which is currently not considered by can be easily added.)
@@ -109,40 +114,39 @@ The electricity cost is computed based on the IT equipment's power demand over t
 
 % Finally, lower taxes and one-time incentives are another important component of the cost of a datacenter.  For example, some states in the US lower taxes on datacenters, as they generate employment and wealth around them.  This component depends on the nature of the savings and applies to each cost in a different way.  Although we do not consider this component further, it is easy to add it to our framework.
 
-\subsubsection{Wind farm}  The cost of the wind farm is modeled as the capital cost ($wfCAPEX$) minus the revenue earned by selling the wind energy to the grid ($wfRev$).  We assume that the operational cost of operating the wind farm is low, and so do not consider it here; of course, this cost can be easily added to the framework.  The capital costs include the cost for buying land ($wfLandCost$) and building the wind farm ($wfBuildCost$), which in turn includes the construction cost and the cost of laying the power line from the wind farm to the closest power plant.  The construction cost is assumed to be a linear function of the desired power generation capacity.  Note that if the datacenter and wind farm are co-located, then the cost for laying power lines is incurred only once.
+\subsubsection{Wind farm}  The cost of the wind farm is modeled as the capital cost ($wfCAPEX$) minus the revenue earned by selling the wind energy to the grid ($wfRev$).  We assume that the operational cost of a wind farm is low, and so do not consider it here; of course, this cost can be easily added to the framework.  The capital costs include the cost for buying land ($wfLandCost$) and building the wind farm ($wfBuildCost$), which in turn includes the construction cost and the cost of laying the power line from the wind farm to the closest power plant.  The construction cost is assumed to be a linear function of the desired power generation capacity.  Note that if the datacenter and wind farm are co-located, then the cost for laying power lines is incurred only once.
 
 The revenue earned by the wind farm is computed over the time period $T$, where the energy generated within any time epoch $t$ in $T$ at location $w$ depends on the efficiency of the wind turbines and the wind speed.  The efficiency of today's wind turbine is close to 50\%.  We capture the efficiency and impact of wind speed in epoch $t$ using the parameter $\beta(w,t)$, which gives the fraction of the wind farm's maximum capacity actually produced during $t$.
 
-\subsubsection{Transmission system} As discussed above, adding a datacenter and wind farm to an existing transmission system will alter the power flow of the network, thus affecting the system transmission loss.  We model this loss across the entire time period $T$, and assume that each unit of loss has a corresponding cost.  For each potential placement of the datacenter and wind farm, we compute the system loss for each time epoch $t$ using the power flow and loadflow equations described in Section~\ref{sec:quantify}.
+\subsubsection{Transmission system} As discussed above, adding a datacenter and wind farm to an existing transmission system will alter the power flow of the network, thus affecting system losses.  We model these losses across the entire time period $T$, and assume that each unit of loss has a corresponding cost.  For each potential placement of the datacenter and wind farm, we compute the system loss for each time epoch $t$ using the power flow and loadflow equations described in Section~\ref{sec:quantify}.
 
 % On the other hand, during the transmission process the line capacity might be violated if the power flow exceeds the limit. We use $numLineVio(t)$ and $numVolVio(t)$ to denote the number of line capacity violations and voltage violations during power transmission. The grid operator will try to avoid such violations when operating the power grid system.
 
 
 \subsubsection{Constraints}
-The major constraints that must be observed when optimizing is that there must not be any voltage and transmission line capacity violations\red{, as shown in Figure~\ref{fig:constraints}}.
+The major constraints that must be observed when optimizing is that there must not be any voltage and transmission line capacity violations.
+%\red{, as shown in Figure~\ref{fig:constraints}}.
 
 
-\begin{figure}[ht]
-{\scriptsize
-\begin{eqnarray}
-&\forall t :  \textit{dcCapacity} \geq \textit{powNeed}(t)\\
-&\forall d, \forall t: \textit{maxPUE}(d) \geq \textit{PUE}(d,t)\\
-&\forall w, \forall t: 0 \leq \beta(w,t) < 1\\
-&\textit{cLinePow}(w)=0 \text{ if } w=d\\
-&V^{min}_i  \leq  V_i \leq V^{max}_i \text{ for each bus $i$ }\\
-&P_k \leq P^{max}_k \text{ for each branch $j$ }
-\end{eqnarray}
-}
-\caption{\red{Optimization constraints, which show the limit of the datacenter power demand, PUE and efficiency factor of the wind farm. Note that the cost for building power line will be saved for the wind farm if it's co-located with the datacenter. The last two constraints indicate that there should be no line overloading and the voltages should be maintained within a required range during the power flow process. }}
-\label{fig:constraints}
-\vspace{-0.2in}
-\end{figure}
+% \begin{figure}[ht]
+% {\scriptsize
+% \begin{eqnarray}
+% &\forall t :  \textit{dcCapacity} \geq \textit{powNeed}(t)\\
+% &\forall d, \forall t: \textit{maxPUE}(d) \geq \textit{PUE}(d,t)\\
+% &\forall w, \forall t: 0 \leq \beta(w,t) < 1\\
+% &\textit{cLinePow}(w)=0 \text{ if } w=d\\
+% &V^{min}_i  \leq  V_i \leq V^{max}_i \text{ for each bus $i$ }\\
+% &P_k \leq P^{max}_k \text{ for each branch $j$ }
+% \end{eqnarray}
+% }
+% \caption{\red{Optimization constraints, which show the limit of the datacenter power demand, PUE and efficiency factor of the wind farm. Note that the cost for building power line will be saved for the wind farm if it's co-located with the datacenter. The last two constraints indicate that there should be no line overloading and the voltages should be maintained within a required range during the power flow process. }}
+% \label{fig:constraints}
+% \vspace{-0.2in}
+% \end{figure}
 
 \subsection{Solving the Optimization Problem}
 
-\red{The problem formulated in Figure~\ref{fig:optimization} is non-linear, since the calculation of $transLoss(t)$ involves solving non-linear equations as stated in Section \ref{sec:casestudy}.
-}
-Currently, we perform a complete search over all possible placement of the datacenter and wind farm to find the best solution to the optimization problem.  This approach works well for the scale that we are studying (e.g., the New England system).  However, as the system scale to much larger sizes, a more scalable approach would eventually be needed.  We leave this for future work.  (Note that the New England system that we study already covers a large area -- most of the North Eastern region of the U.S. and some parts of Canada -- so that it may not be necessary to study much larger systems.)
+The optimization problem formulated in Figure~\ref{fig:optimization} is non-linear, since the calculation of $transLoss(t)$ requires solving the non-linear power flow equations introduced in Section \ref{sec:casestudy}.  Currently, we perform a complete search over all possible placements of the datacenter and wind farm to find the best solution.  This approach works well for the scale that we are studying (e.g., the New England system).  However, as the system scales to much larger sizes, a more scalable approach would eventually be needed.  We leave this for future work.  (Note that the New England system that we study already covers a large area -- most of the North Eastern region of the U.S. and some parts of Canada -- so that it may not be necessary to study much larger systems.)
 
 % datacenters and renewable power plant, as well as the capacity provisioned at each location for datacenters or green power plants (if any).
 
